--- a/i3/config
+++ b/i3/config
@@ -97,6 +97,12 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# move between displays
+bindsym $mod+Prior move workspace to output left
+bindsym $mod+Next move workspace to output right
+bindsym $mod+Shift+Prior move container to output left
+bindsym $mod+Shift+Next move container to output right
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
