--- a/i3/config
+++ b/i3/config
@@ -2,12 +2,16 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:Terminus 16px
 
+# is used in the bar {} block below.
+font pango:Terminus 18px
 # no focus change on mouse movements
 focus_follows_mouse no
 
@@ -24,7 +28,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec dmenu_run -fn '-adobe-palatino-*-r-*-*-17-*-*-*-*-*-iso8859-15'
 
 # lock screen
-bindsym $mod+l exec i3lock
+bindsym $mod+l exec loginctl lock-session
 
 # change focus
 bindsym $mod+Left focus left
@@ -65,13 +69,18 @@ bindsym $mod+a focus parent
 bindsym $mod+Shift+a focus child
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+
+# assignments
+# assign [class="^google-chrome$"] 4
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -102,6 +111,10 @@ bindsym $mod+Prior move workspace to output left
 bindsym $mod+Next move workspace to output right
 bindsym $mod+Shift+Prior move container to output left
 bindsym $mod+Shift+Next move container to output right
+
+bindsym $mod+F1 move workspace to output eDP-1
+bindsym $mod+F2 move workspace to output DP-1-1
+bindsym $mod+F3 move workspace to output DP-1-2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -139,32 +152,60 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+    status_command i3status
 	font pango:Terminus 16px
+    tray_output primary
 }
 
 
 #--------------------------------------------------------------------------------
 # Shutdown, Reboot, Lock Screen, and Logout #657b83
-set $sysmenu "system:  [P]oweroff  [R]eboot  [L]ock  log[O]ut "
+set $sysmenu "system:  [P]oweroff  [R]eboot  [L]ock  [S]uspend log[O]ut "
 bindsym $mod+Shift+Return      mode $sysmenu
 mode $sysmenu {
     bindsym p         exec shutdown -P now
     bindsym r         exec shutdown -r now
-    bindsym l         exec i3lock
+    bindsym l         exec loginctl lock-session
+    bindsym s         exec --no-startup-id systemctl suspend, mode "default"
     bindsym o         exec --no-startup-id i3-msg exit, mode "default"
     bindsym Return    mode "default"
     bindsym Escape    mode "default"
 }
 
+
 #--------------------------------------------------------------------------------
-# shortcuts
-set $appmenu "start:  [C]loudstation  [D]ropbox  [I]ntelliJ "
+# shortcut
+set $appmenu "start:  [C]hrome  [I]ntelliJ  [S]ublime"
 bindsym $mod+x      mode $appmenu
 mode $appmenu {
-    bindsym c         exec --no-startup-id synology-cloud-station autostart, mode "default"
-    bindsym d         exec --no-startup-id dropbox start, mode "default"
-    bindsym i         exec idea.sh, mode "default"
+    bindsym c         exec google-chrome, mode "default"
+    bindsym i         exec idea, mode "default"
+    bindsym s         exec subl, mode "default"
     bindsym Return    mode "default"
     bindsym Escape    mode "default"
 }
+
+# Autostart
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
+# exec --no-startup-id xfce4-power-manager
+exec --no-startup-id synology-cloud-station-drive autostart
+exec --no-startup-id dropbox start -i
+exec --no-startup-id /home/matthias/.local/share/JetBrains/Toolbox/bin/jetbrains-toolbox --minimize
+exec --no-startup-id pasystray
+
+# exec --no-startup-id slack
+
+
+# floating windows
+for_window [class="Pavucontrol"] floating enable
+
+
+# fix workspace assignments
+# assign [class="jetbrains-idea"] 2
+# assign [class="Google-chrome"] 4
+# assign [class="Slack"] 5
+# assign [class="Spotify"] 9
+
+exec "setxkbmap -layout de -variant nodeadkeys"
